# diaphanous

./: .gitignore  README.md  analysis.ipynb  codebook.md  pyproject.toml  tables.tex
analysis/: country.ipynb  index.ipynb  map.ipynb  meta.ipynb  platform.R  platform.ipynb  recipients.ipynb  relationship.ipynb  reports.ipynb  reversal.ipynb  tiktok.ipynb  united-states.ipynb
data/: arab-league.csv  comparable-report-counts.csv  comparable-reports-by-provider.csv  comparable-reports.csv  countries.csv  csam-pieces-by-relationship-to-victim.csv  csam-report-contents.csv  csam-report-recipients.csv  csam-reports-by-state.csv  csam-reports-per-country.csv  csam-reports-per-platform.json  csam-reports-per-year-country-capita.csv  csam-reports-per-year.csv  global-population.csv  internet-users.csv  learcat-relationship-2016.csv  meta-2021-q4.csv  meta-2022-q1.csv  meta-2023-q2.csv  meta-q1-2023.csv  ocse-report-contents.csv  ocse-reports-per-country.csv  ocse-reports-per-platform.json  ocse-reports-per-year-country-capita.csv  ocse-reports-per-year.csv  ojjdp-qa02403-2019.csv  populations.csv  provenance.md  regions.csv  social-media-users.csv  tiktok-2022-q4.csv  tiktok-2023-q3.csv
data/discord/: discord-2020-h2.csv  discord-2021-h1.csv  discord-2021-h2.csv  discord-2022-q1.csv  discord-2022-q2.csv  discord-2022-q3.csv  discord-2022-q4.csv  discord-2023-q1.csv  discord-2023-q2.csv  discord-2023-q3.csv  discord-2023-q4.csv
data/meta/: family-active-people.csv  meta-2021-q2.csv  meta-2021-q3.csv  meta-2022-q4.csv  meta-2023-q3.csv  meta-2023-q4.csv  meta-2024-q1.csv  meta-2024-q2.csv
data/microsoft/: microsoft-2020-h1.xlsx  microsoft-2020-h2.xlsx  microsoft-2021-h1.xlsx  microsoft-2021-h2.xlsx  microsoft-2022-h1.xlsx  microsoft-2022-h2.xlsx  microsoft-2023-h1.xlsx  microsoft-2023-h2.xlsx
data/tiktok/: tiktok-2021-q3.xlsx  tiktok-2021-q4.xlsx  tiktok-2022-q1.xlsx  tiktok-2022-q2.xlsx  tiktok-2023-q1.csv  tiktok-2023-q2.csv  tiktok-2023-q4.csv  tiktok-2024-q1.csv  tiktok-2024-q2.csv
diaphanous/: __init__.py  country.py  fetch.py  frame_logger.py  main.py  mapping.py  meta.py  terminal.py
diaphanous/dsa/: schema.py
figure/: flow.txt
intransparent/: __init__.py  __main__.py  content.py  country.py  display.py  fetch.py  frame_logger.py  main.py  mapping.py  meta.py  show.py  tiktok.py
report/: bibliography.bib  build.sh  references.txt  report.tex  stuff.tex  very-large-online.txt
show/: __init__.py  data.py  formatter.py  markup.py  texting.py  util.py  vertical.py
test/: test_reflow.py
(+12 files in other folders)
