[build-system]
requires = ["flit_core >=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "intransparent"
version = "1.0"
description = "CSAM reporting by social media and NCMEC"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache 2.0"}
authors = [{name = "Robert Grimm", email = "rgrimm@alum.mit.edu"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Other Environment",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Sociology",
]

dependencies = [
    "ipykernel",  # 6.23.1  -- required for runing notebooks, includes ipython
    "pandas",     # 2.0.1   -- dataframes
    "geopandas",  # 0.13.0  -- geographical data (effectively unused currently)
    "jinja2",     # 3.1.2   -- required for styling Pandas
    "plotly",     # 5.14.1  -- one option for graphing Pandas
    "nbformat",   # 5.9.0   -- required for rendering Plotly MIME types
    "kaleido",    # 0.2.1   -- required for exporting images from Plotly
    "matplotlib", # 3.7.1   -- required for background gradient in table
]

[project.optional-dependencies]

dev = [
    "mypy",
    "pandas-stubs",    # required for type-checking code, eliminates 93 errors.
    "black[jupyter]",
    "flit",
    "vermin",          # check minimum required Python version
]

[project.urls]
Repository = "https://github.com/apparebit/intransparent"


[tool.mypy]
python_version = "3.11"
files = ["intransparent/**/*.py"]
mypy_path = ["stubs"]
warn_unused_configs = true
disallow_any_unimported = true
# disallow_any_expr = true
# disallow_any_decorated = true
# disallow_any_explicit = true
# disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
# warn_return_any = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[tool.black]
target-version = ['py311']
skip-string-normalization = true
include = '\.(py|ipynb)'
